package com.example.midespensa.data.model

data class Producto (
    val nombre: String = "",
    val cantidad: Int = 1,
    val unidad: String = "unidad",
    val estado: String = "",
    val caducidad: String = "",
    val id: String = ""
)