package com.example.midespensa.data.model

data class ProductoCompra(
    val id: String = "",
    val nombre: String = "",
    val cantidad: Int = 1,
    val unidades: String = "unidad",
    val detalles: String = ""
)